ByteBuffers don't crash on loading (use wrap), IDs are verified differently (use validate)