@@ -3,7 +3,7 @@ package vision.voltsofdoom.zapbyte.resource;
 import java.util.ArrayList;
 import java.util.Objects;
 import java.util.PrimitiveIterator.OfInt;
-import com.google.common.collect.ImmutableList;
+import com.google.common.collect.Lists;
 
 /**
  * Identifies something. This could be something such as a resource on the file system or an object
@@ -21,25 +21,7 @@ public class ID implements IID {
     this.domain = domain;
     this.entry = entry;
 
-    ImmutableList.of(domain, entry).forEach((str) -> {
-      try {
-
-        if (str.length() > 32) {
-          throw new ResourceLocationInvalidException("ResourceLocation section " + str + " too long: " + str.length());
-        }
-
-        if (str.length() < 4) {
-          throw new ResourceLocationInvalidException("ResourceLocation section " + str + " too short: " + str.length());
-        }
-
-        if (str.contains(":")) {
-          throw new ResourceLocationInvalidException("ResourceLocation section " + str + " contains an invalid colon!");
-        }
-
-      } catch (ResourceLocationInvalidException r) {
-        r.printStackTrace();
-      }
-    });
+    validate();
   }
 
   /**
@@ -49,11 +31,31 @@ public class ID implements IID {
    * @return Whether this {@link ID} is valid.
    */
   @Override
-  public ResourceLocationValidityState validate() {
-    return (domain != null && entry != null) ? ResourceLocationValidityState.VALID : ResourceLocationValidityState.GENERIC_INVALID;
+  public IDValidityState validate() {
+
+    IDValidityState state = (domain != null && entry != null) ? IDValidityState.VALID : IDValidityState.GENERIC_INVALID;
+
+    for (String str : Lists.newArrayList(domain, entry)) {
+      if (str.length() > 32) {
+        state = IDValidityState.TOO_LONG;
+        continue;
+      }
+
+      if (str.length() < 4) {
+        state = IDValidityState.TOO_SHORT;
+        continue;
+      }
+
+      if (str.contains(":")) {
+        state = IDValidityState.INVALID_COLON_COUNT;
+        continue;
+      }
+    }
+
+    return state;
   }
 
-  public static ResourceLocationValidityState validate(String string) {
+  public static IDValidityState validate(String string) {
 
     // Get colon count
     int colonCount = 0;
@@ -72,14 +74,14 @@ public class ID implements IID {
       if (!Character.isLetter(c)) {
         if (isColon(c)) {
           if (colonCount++ > 1) {
-            return ResourceLocationValidityState.INVALID_COLON_COUNT;
+            return IDValidityState.INVALID_COLON_COUNT;
           } else {
             colonIndex = index;
           }
 
           foundColon = true;
         } else {
-          return ResourceLocationValidityState.ILLEGAL_CHARACTER;
+          return IDValidityState.ILLEGAL_CHARACTER;
         }
       }
 
@@ -96,26 +98,26 @@ public class ID implements IID {
 
     // If doesn't contain exactly one colon
     if (colonCount < 1 || colonCount > 1) {
-      return ResourceLocationValidityState.INVALID_COLON_COUNT;
+      return IDValidityState.INVALID_COLON_COUNT;
     }
 
     // If colon does not obstruct lengths, i.e. is too short
     if (colonIndex < 4 || colonIndex > string.length() - 5) {
-      return ResourceLocationValidityState.TOO_SHORT;
+      return IDValidityState.TOO_SHORT;
     }
 
     // If either side is too long
     if (preColonLetterCount > 32 || postColonLetterCount > 32) {
-      return ResourceLocationValidityState.TOO_LONG;
+      return IDValidityState.TOO_LONG;
     }
 
-    return ResourceLocationValidityState.VALID;
+    return IDValidityState.VALID;
   }
 
   public static IID fromString(String str) {
     Objects.requireNonNull(str, () -> "Constructing ResourceLocation fromString() >> Input string cannot be null!");
 
-    ResourceLocationValidityState validityState = validate(str);
+    IDValidityState validityState = validate(str);
     if (!validityState.isValid()) {
       throw new IllegalStateException("Invalid string '" + str + "' given to construct a ResourceLocation! >> " + validityState.getMessage());
     }
@@ -128,7 +130,7 @@ public class ID implements IID {
     OfInt iteratorTwo = str.chars().iterator();
     while (iteratorTwo.hasNext()) {
       Integer integer = (Integer) iteratorTwo.next();
-      Character character = new Character((char) integer.intValue());
+      Character character = Character.valueOf((char) integer.intValue());
 
       if (isColon(character)) {
         foundColon = true;
@@ -195,17 +197,11 @@ public class ID implements IID {
     return true;
   }
 
-  @SuppressWarnings("unused")
-  public static void main(String[] args) {
-    IID r2 = ID.fromString("domain:entry");
-    System.out.println(validate("domain::entry"));
-  }
-
   public static boolean isColon(Character c) {
-    return c.equals(new Character(new String(":").charAt(0)));
+    return c.equals(Character.valueOf(new String(":").charAt(0)));
   }
 
   public static boolean isColon(char c) {
-    return isColon(new Character(c));
+    return isColon(Character.valueOf(c));
   }
 }
